@@ -1,3 +1,9 @@
+2009-07-27  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Make factory more verbose.
+	* include/roboptim/core/solver-factory.hxx: Display
+	error messages if lt_dlclose or lt_dlexit fail.
+
 2009-07-24  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Add copy constructor for GenericSolver.
